--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Access Control</title>
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="අලුත් එකක් දැන්ම බලන්න 💕">
+    <meta property="og:title" content="TikTok එකේ නංගිගේ ෆුල් රයිඩින් එක 🥵🤩">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jil.kello.me/">
-    <meta property="og:image" content="https://jil.kello.me/ogimages/image_1743145170_67e648d262095.png">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:description" content="Watch cool jilhub and kello.me photos and videos in one place.">
+    <meta property="og:image" content="https://jil.kello.me/ogimages/image_1743146587_67e64e5b03f90.png">
+    <meta property="og:image:width" content="1080">
+    <meta property="og:image:height" content="1080">
+    <meta property="og:description" content="TikTok එකේ නංගිගේ ෆුල් රයිඩින් එක 🥵🤩">
     <script>
         window.onload = function() {
             // Check the user agent
